<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtVnombreApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Casa Inteligente"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <ImageButton
                android:id="@+id/imageButtonFoco"
                android:layout_width="147dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/IB"
                android:onClick="buttonPressedMain"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop-toTopOf="parent"

                app:srcCompat="@drawable/focooff"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/txtViluminacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Iluminación"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButtonSOS"
                android:layout_width="199dp"
                android:layout_height="179dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/IB2"
                android:onClick="buttonPressedMain"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonFoco"
                app:srcCompat="@drawable/signalalarm"
                tools:ignore="UsingOnClickInXml"

                />

            <TextView
                android:id="@+id/txtVSOS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="SOS mensaje"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButtonUbicacion"
                android:layout_width="139dp"
                android:layout_height="143dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/IB3"
                android:onClick="buttonPressedMain"
                android:padding="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonSOS"
                app:srcCompat="@drawable/pinlocation"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/txtVubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Ubicación"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
