<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LightsActivity">

    <TextView
        android:id="@+id/txtVactivityIluminacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iluminación"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IBF1"
                app:layout_constraintStart_toEndOf="@+id/imageButton2"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:contentDescription="@string/IBF1"
                app:srcCompat="@drawable/offbulb"
                android:onClick="buttonPressed"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Foco 1"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtvIntensidadFocoUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intensidad"
                android:layout_gravity="center"
                android:gravity="center"
                 />

            <SeekBar
                android:id="@+id/sBfocoUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IBF2"
                android:contentDescription="@string/IBF2"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/offbulb"
                android:onClick="buttonPressed"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Foco 2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtvIntensidadFocoDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intensidad"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <SeekBar
                android:id="@+id/sBfocoDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/IBF3"
                android:contentDescription="@string/IBF3"
                app:srcCompat="@drawable/offbulb"
                android:onClick="buttonPressed"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Foco 3"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtvIntensidadFocoTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intensidad"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <SeekBar
                android:id="@+id/sBfocoTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IBF4"
                android:contentDescription="@string/IBF4"
                app:srcCompat="@drawable/offbulb"
                android:onClick="buttonPressed"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Foco 4"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtvIntensidadFocoCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Intensidad"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <SeekBar
                android:id="@+id/sBfocoCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </LinearLayout>





</LinearLayout>